# Electronics_retail_chain

./: .coveragerc  .flake8  .gitignore  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  test_basic.py
config/: __init__.py  settings.py  urls.py
networknode/: __init__.py  admin.py  apps.py  filters.py  models.py  serializer.py  test_models.py  test_views.py  tests.py  urls.py  views.py
networknode/migrations/: 0001_initial.py  0002_alter_networknode_options_alter_networknode_supplier_and_more.py
